Compiler/tests/semantics/fail/variable_tipo_System.java
// Falla porque no puede declararse una variable de tipo System.

class Test {
	static void main()
	var System x;
	{
	
	}

}